# lourock

./: .gitignore  DEPLOYMENT.md  README.md  SEO_OPTIMIZATION_MONTPELLIER.md  deploy.sh  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
dakota-dreamers/: package-lock.json  package.json  vercel.json
dakota-dreamers/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
dakota-dreamers/app/[locale]/: layout.tsx  page.tsx
dakota-dreamers/app/design-system/: page.tsx
dakota-dreamers/app/hooks/: useTranslation.ts
dakota-dreamers/app/translations/: en.json  (+1 more)
gsc-monitoring/: .gitignore  README.md  gsc_fetch_issues.py  pyproject.toml
landing/: package-lock.json  package.json  vercel.json
landing/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/lib/: logger.ts
landing/public/: llms.txt
last-call/: middleware.ts  package-lock.json  package.json
last-call/app/: globals.css  robots.ts  sitemap.ts
last-call/public/: llms.txt
les-espanters/: middleware.ts  package-lock.json  package.json
les-espanters/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
les-espanters/public/: hunter  llms.txt
mathieu-schmidt/: middleware.ts  package-lock.json  package.json  vercel.json
mathieu-schmidt/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
mathieu-schmidt/public/: llms.txt  smile
tribute-band-the-kills/: package-lock.json  package.json  vercel.json
tribute-band-the-kills/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
tribute-band-the-kills/public/: README-video.md  llms.txt
(+43 files in other folders)
